--- a/index.html
+++ b/index.html
@@ -40,7 +40,26 @@
                 </button>
             </div>
         </div>
-    </header>    
+    </header>
+    <div class="service">
+        <div class="container">
+            <div class="row">
+                <div class="eight columns">
+                    <h1 class="service-title">Web <strong>Development</strong></h1>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat maxime id, soluta voluptate
+                        amet dolorem esse cupiditate eum tempore neque? Iste distinctio tempora nesciunt voluptates
+                        accusamus unde quidem praesentium aspernatur.</p>
+                    <p>
+                        Iste distinctio tempora nesciunt voluptates
+                        accusamus unde quidem praesentium aspernatur. Lorem ipsum dolor sit amet, consectetur
+                        adipisicing elit.</p>
+                </div>
+                <div class="four columns">4</div>
+            </div>
+
+        </div>
+    </div>
 </body>
 
 </html>
