--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="./vendor/skeleton/skeleton.css" />
     <link rel="stylesheet" type="text/css" href="./css/styles.css" />
     <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200;300;400;700&display=swap" rel="stylesheet" />
+    <script src="https://kit.fontawesome.com/2f65b256d9.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -55,7 +56,11 @@
                         accusamus unde quidem praesentium aspernatur. Lorem ipsum dolor sit amet, consectetur
                         adipisicing elit.</p>
                 </div>
-                <div class="four columns">4</div>
+                <div class="four columns">
+                    <div class="service-icon">
+                        <i class="fab fa-html5"></i>
+                    </div>
+                </div>
             </div>
 
         </div>
