--- a/index.html
+++ b/index.html
@@ -65,6 +65,29 @@
 
         </div>
     </div>
+    <div class="service service-gray">
+        <div class="container">
+            <div class="row">
+                <div class="four columns">
+                    <div class="service-icon">
+                        <i class="fas fa-user-friends"></i>
+                    </div>
+                </div>
+                <div class="eight columns">
+                    <h1 class="service-title">Identity <strong>Branding</strong></h1>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat maxime id, soluta voluptate
+                        amet dolorem esse cupiditate eum tempore neque? Iste distinctio tempora nesciunt voluptates
+                        accusamus unde quidem praesentium aspernatur.</p>
+                    <p>
+                        Iste distinctio tempora nesciunt voluptates
+                        accusamus unde quidem praesentium aspernatur. Lorem ipsum dolor sit amet, consectetur
+                        adipisicing elit.</p>
+                </div>
+            </div>
+
+        </div>
+    </div>
 </body>
 
 </html>
