--- a/index.html
+++ b/index.html
@@ -175,6 +175,24 @@
             </div>
         </div>
     </div>
+    <div class="clients">
+        <div class="container">
+            <h2 class="clients-heading">Awesome <strong>Clients</strong></h2>
+            <p class="clients-subheading">See what nice things clients said about us</p>
+            <div class="row">
+                <div class="three columns">
+                    <img src="img/Deadpool.jpg" class="client-image" alt="Our first happy client">
+                </div>
+                <div class="nine columns">
+                    <div class="client-quote">
+                        <p>„Du hast gewonnen… Dein Leben ist auf jeden Fall tausendmal beschissener als meins.“</p>
+                        <p class="client-quote-author"> - Deadpool, Founder of X-Force</p>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
