Finalize customer opinions

--- a/index.html
+++ b/index.html
@@ -189,7 +189,17 @@
                         <p class="client-quote-author"> - Deadpool, Founder of X-Force</p>
                     </div>
                 </div>
-
+            </div>
+            <div class="row">
+                <div class="nine columns">
+                    <div class="client-quote client-quote-left">
+                        <p>„Was ich im Inneren bin, zählt nicht. Nur das, was ich tue, zeigt, wer ich bin. “ </p>
+                        <p class="client-quote-author"> - Batman, Founder of Lego</p>
+                    </div>
+                </div>
+                <div class="three columns">
+                    <img src="img/Batman.jpg" class="client-image" alt="Darkknight is happy">
+                </div>
             </div>
         </div>
     </div>
