--- a/index.html
+++ b/index.html
@@ -203,6 +203,14 @@
             </div>
         </div>
     </div>
+    <div class="logo">
+        <div class="container">
+                <img src="https://www.freepnglogos.com/uploads/html5-logo-png/html5-logo-html-logo-0.png"
+                    class="html-logo" alt="html5 logo, html logo" />
+                <img src="https://www.freepnglogos.com/uploads/html5-logo-png/html5-logo-css-logo-png-transparent-svg-vector-bie-supply-9.png"
+                    class="css-logo" alt="html5 logo, css logo png transparent svg vector bie supply" />
+        </div>
+    </div>
 </body>
 
 </html>
