--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
             <p class="clients-subheading">See what nice things clients said about us</p>
             <div class="row">
                 <div class="three columns">
-                    <img src="img/Deadpool.jpg" class="client-image" alt="Our first happy client">
+                    <img src="img/Deadpool.jpg" class="circle-image" alt="Our first happy client">
                 </div>
                 <div class="nine columns">
                     <div class="client-quote">
@@ -198,17 +198,46 @@
                     </div>
                 </div>
                 <div class="three columns">
-                    <img src="img/Batman.jpg" class="client-image" alt="Darkknight is happy">
+                    <img src="img/Batman.jpg" class="circle-image" alt="Darkknight is happy">
                 </div>
             </div>
         </div>
     </div>
     <div class="logo">
         <div class="container">
-                <img src="https://www.freepnglogos.com/uploads/html5-logo-png/html5-logo-html-logo-0.png"
-                    class="html-logo" alt="html5 logo, html logo" />
-                <img src="https://www.freepnglogos.com/uploads/html5-logo-png/html5-logo-css-logo-png-transparent-svg-vector-bie-supply-9.png"
-                    class="css-logo" alt="html5 logo, css logo png transparent svg vector bie supply" />
+            <img src="https://www.freepnglogos.com/uploads/html5-logo-png/html5-logo-html-logo-0.png" class="html-logo"
+                alt="html5 logo, html logo" />
+            <img src="https://www.freepnglogos.com/uploads/html5-logo-png/html5-logo-css-logo-png-transparent-svg-vector-bie-supply-9.png"
+                class="css-logo" alt="html5 logo, css logo png transparent svg vector bie supply" />
+        </div>
+    </div>
+    <div class="teams">
+        <div class="container">
+            <h2 class="teams-heading">Amazing <strong>Team</strong></h2>
+            <p class="teams-subheading">These wonderful people make work enjoyable.</p>
+            <div class="row">
+                <div class="four columns">
+                    <div class="team-image-container">
+                        <img src="img/team-1.jpg" class="circle-image team-image" alt="bello profil">
+                    </div>
+                    <h6 class="team-name">Bello Bel</h6>
+                    <p class="team-name-desc">Marketer</p>
+                </div>
+                <div class="four columns">
+                    <div class="team-image-container">
+                        <img src="img/team-2.jpg" class="circle-image team-image" alt="puppy">
+                    </div>
+                    <h6 class="team-name">Puppy Puff</h6>
+                    <p class="team-name-desc">Coder</p>
+                </div>
+                <div class="four columns">
+                    <div class="team-image-container">
+                        <img src="img/team-3.jpg" class="circle-image team-image" alt="pussy-cat">
+                    </div>
+                    <h6 class="team-name">Pussy Cat</h6>
+                    <p class="team-name-desc">Graphic Designer</p>
+                </div>
+            </div>
         </div>
     </div>
 </body>
