--- a/index.html
+++ b/index.html
@@ -222,6 +222,17 @@
                     </div>
                     <h6 class="team-name">Bello Bel</h6>
                     <p class="team-name-desc">Marketer</p>
+                    <div class="team-icons">
+                        <a class="team-icon" href="https://twitter.com" target="_blank">
+                            <i class="fab fa-twitter" aria-hidden="true"></i>
+                        </a>
+                        <a class="team-icon" href="https://facebook.com" target="_blank">
+                            <i class="fab fa-facebook-f" aria-hidden="true"></i>
+                        </a>
+                        <a class="team-icon" href="https://pinterest.com" target="_blank">
+                            <i class="fab fa-pinterest-p" aria-hidden="true"></i>
+                        </a>
+                    </div>
                 </div>
                 <div class="four columns">
                     <div class="team-image-container">
@@ -229,6 +240,17 @@
                     </div>
                     <h6 class="team-name">Puppy Puff</h6>
                     <p class="team-name-desc">Coder</p>
+                    <div class="team-icons">
+                        <a class="team-icon" href="https://twitter.com" target="_blank">
+                            <i class="fab fa-twitter" aria-hidden="true"></i>
+                        </a>
+                        <a class="team-icon" href="https://facebook.com" target="_blank">
+                            <i class="fab fa-facebook-f" aria-hidden="true"></i>
+                        </a>
+                        <a class="team-icon" href="https://google.com" target="_blank">
+                            <i class="fab fa-google-plus-g" aria-hidden="true"></i>
+                        </a>
+                    </div>
                 </div>
                 <div class="four columns">
                     <div class="team-image-container">
@@ -236,6 +258,14 @@
                     </div>
                     <h6 class="team-name">Pussy Cat</h6>
                     <p class="team-name-desc">Graphic Designer</p>
+                    <div class="team-icons">
+                        <a class="team-icon" href="https://facebook.com" target="_blank">
+                            <i class="fab fa-facebook-f" aria-hidden="true"></i>
+                        </a>
+                        <a class="team-icon" href="https://pinterest.com" target="_blank">
+                            <i class="fab fa-pinterest-p" aria-hidden="true"></i>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
