insert team footer

--- a/index.html
+++ b/index.html
@@ -268,6 +268,8 @@
                     </div>
                 </div>
             </div>
+            <p class="footer">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda eos, magnam numquam.</p>
+            <p class="footer">ab minus obcaecati quisquam, possimus necessitatibus beatae at</p>
         </div>
     </div>
 </body>
