develop foot area

--- a/index.html
+++ b/index.html
@@ -268,9 +268,10 @@
                     </div>
                 </div>
             </div>
-            <p class="footer">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda eos, magnam numquam.
+            <p class="supported">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda eos, magnam
+                numquam.
             </p>
-            <p class="footer">ab minus obcaecati quisquam, possimus necessitatibus beatae at</p>
+            <p class="supported">ab minus obcaecati quisquam, possimus necessitatibus beatae at</p>
         </div>
     </div>
     <div class="contact">
@@ -320,14 +321,21 @@
                     </ul>
                 </div>
                 <div class="six columns">
-                    <form action="index.html" method="GET">
+                    <form class="contact-form" action="index.html" method="GET">
                         <input class="contact-input" type="text" placeholder="Your Name *" required />
                         <input class="contact-input" type="text" placeholder="Your Email *" required />
-                        <textarea class="contact-input contact-message" placeholder="Your message *" required="required"></textarea>
+                        <textarea class="contact-input contact-message" placeholder="Your message *"
+                            required="required"></textarea>
                         <input class="contact-submit" type="submit" value="Submit Message" />
-                    </form>                    
+                    </form>
                 </div>
             </div>
+        </div>
+    </div>
+    <div class="footer">
+        <div class="container">
+            <hr class="footer-hr" />
+            <p>Umgesetz nach HTML im HTML-Kurs</p>
         </div>
     </div>
 </body>
