--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
             </div>
             <nav class="header-navbar">
                 <ul class="header-navbar-links">
-                    <li>Home</li>
-                    <li>Services</li>
-                    <li>Clients</li>
-                    <li>Team</li>
-                    <li>Contact</li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#service">Services</a></li>
+                    <li><a href="#clients">Clients</a></li>
+                    <li><a href="#team">Team</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -37,12 +37,14 @@
                     Check mal Innsbruck!
                 </div>
                 <button class="slogan-button">
-                    Mehr erfahren!
+                    <a href="#service">
+                        Mehr erfahren!
+                    </a>
                 </button>
             </div>
         </div>
     </header>
-    <div class="service">
+    <div class="service" id="service">
         <div class="container">
             <div class="row">
                 <div class="eight columns">
@@ -175,7 +177,7 @@
             </div>
         </div>
     </div>
-    <div class="clients">
+    <div class="clients" id="clients">
         <div class="container">
             <h2 class="clients-heading">Awesome <strong>Clients</strong></h2>
             <p class="clients-subheading">See what nice things clients said about us</p>
@@ -211,7 +213,7 @@
                 class="css-logo" alt="html5 logo, css logo png transparent svg vector bie supply" />
         </div>
     </div>
-    <div class="teams">
+    <div class="teams" id="team">
         <div class="container">
             <h2 class="teams-heading">Amazing <strong>Team</strong></h2>
             <p class="teams-subheading">These wonderful people make work enjoyable.</p>
@@ -274,7 +276,7 @@
             <p class="supported">ab minus obcaecati quisquam, possimus necessitatibus beatae at</p>
         </div>
     </div>
-    <div class="contact">
+    <div class="contact" id="contact">
         <div class="container">
             <div class="row">
                 <div class="six columns">
@@ -335,7 +337,7 @@
     <div class="footer">
         <div class="container">
             <hr class="footer-hr" />
-            <p>Umgesetz nach HTML im HTML-Kurs</p>
+            <p>Umgesetz nach HTML im HTML-Kurs. <a href="#">Nach oben</a></p>
         </div>
     </div>
 </body>
