Responsive Desing: Clients

--- a/index.html
+++ b/index.html
@@ -181,12 +181,16 @@
             <p class="clients-subheading">See what nice things clients said about us</p>
             <div class="row">
                 <div class="three columns">
-                    <img src="img/Deadpool.jpg" class="circle-image" alt="Our first happy client">
+                    <img src="img/Deadpool.jpg" class="client-image circle-image" alt="Our first happy client">
                 </div>
                 <div class="nine columns">
                     <div class="client-quote">
                         <p>„Du hast gewonnen… Dein Leben ist auf jeden Fall tausendmal beschissener als meins.“</p>
-                        <p class="client-quote-author"> - Deadpool, Founder of X-Force</p>
+                        <p class="client-quote-author">
+                            <img src="img/Deadpool.jpg" class="client-quote-image circle-image"
+                                alt="Our first happy client">
+                            - Deadpool, Founder of X-Force
+                        </p>
                     </div>
                 </div>
             </div>
@@ -194,11 +198,14 @@
                 <div class="nine columns">
                     <div class="client-quote client-quote-left">
                         <p>„Was ich im Inneren bin, zählt nicht. Nur das, was ich tue, zeigt, wer ich bin. “ </p>
-                        <p class="client-quote-author"> - Batman, Founder of Lego</p>
+                        <p class="client-quote-author">
+                            <img src="img/Batman.jpg" class="client-quote-image circle-image" alt="Darkknight is happy">
+                            - Batman, Founder of Lego
+                        </p>
                     </div>
                 </div>
                 <div class="three columns">
-                    <img src="img/Batman.jpg" class="circle-image" alt="Darkknight is happy">
+                    <img src="img/Batman.jpg" class="client-image circle-image" alt="Darkknight is happy">
                 </div>
             </div>
         </div>
