--- a/index.html
+++ b/index.html
@@ -11,12 +11,25 @@
 </head>
 
 <body>
+    <div class="side-menu" style="display: none;">
+        <h3>Navigation</h3>
+        <ul class="side-menu-navigation">
+            <li><a href="#">Home</a></li>
+            <li><a href="#service">Services</a></li>
+            <li><a href="#clients">Clients</a></li>
+            <li><a href="#team">Team</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </div>
     <header class="header">
         <div class="container">
             <div class="header-brand-wrapper">
                 <a class="header-brand" href="index.html">DAHOAM</a>
             </div>
             <nav class="header-navbar">
+                <button id="side-menu-trigger">
+                    <i class="fas fa-bars"></i>
+                </button>
                 <ul class="header-navbar-links">
                     <li><a href="#">Home</a></li>
                     <li><a href="#service">Services</a></li>
@@ -345,6 +358,22 @@
             <p>Umgesetz nach HTML im HTML-Kurs. <a href="#">Nach oben</a></p>
         </div>
     </div>
+    <script type="text/javascript" src="./vendor/jquery/jquery-3.6.0.js"></script>
+    <script type="text/javascript" src="./vendor/jpanelmenu/jquery.jpanelmenu.js"></script>
+
+    <script type="text/javascript">
+        jQuery(document).ready(function ($) {
+            var jPM = $.jPanelMenu({
+                menu: '.side-menu',
+                trigger: '#side-menu-trigger',
+                direction: 'right'
+            });
+            jPM.on();
+            $(".side-menu a").click(function() {
+                jPM.close();
+            });
+        });
+    </script>
 </body>
 
 </html>
