--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8" />
     <title>Eine erste Designseite</title>
 
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+
     <link rel="stylesheet" type="text/css" href="./css/styles.css" />
     <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200;300;400;700&display=swap" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/2f65b256d9.js" crossorigin="anonymous"></script>
